--- a/cv.tex
+++ b/cv.tex
@@ -22,11 +22,11 @@
 %\mobile{mobile (optional)}                    % optional, remove the line if not wanted
 %\phone{phone (optional)}                      % optional, remove the line if not wanted
 %\fax{fax (optional)}                          % optional, remove the line if not wanted
-%\email{email (optional)}                      % optional, remove the line if not wanted
+\email{leopard.not.a+cv@gmail.com}                      % optional, remove the line if not wanted
 \homepage{leopard.in.ua}
 %\extrainfo{website:~http://leopard.in.ua} % optional, remove the line if not wanted
 %\photo[64pt]{ava3}                         % '64pt' is the height the picture must be resized to and 'picture' is the name of the picture file; optional, remove the line if not wanted
-\quote{I'm not a great programmer; I'm just a good programmer with great habits.}                 % optional, remove the line if not wanted
+%\quote{I'm not a great programmer; I'm just a good programmer with great habits.}                 % optional, remove the line if not wanted
 %\nopagenumbers{}                             % uncomment to suppress automatic page numbering for CVs longer than one page
 
 %----------------------------------------------------------------------------------
