--- a/cv.tex
+++ b/cv.tex
@@ -9,7 +9,7 @@
 \usepackage[utf8]{inputenc}                   % replace by the encoding you are using
 % adjust the page margins
 \usepackage[scale=0.85]{geometry}
-%\setlength{\hintscolumnwidth}{3cm}            % if you want to change the width of the column with the dates
+\setlength{\hintscolumnwidth}{4cm}            % if you want to change the width of the column with the dates
 %\AtBeginDocument{\setlength{\maketitlenamewidth}{6cm}}  % only for the classic theme, if you want to change the width of your name placeholder (to leave more space for your address details
 \AtBeginDocument{\recomputelengths}                     % required when changes are made to page layout lengths
 
