--- a/cv.tex
+++ b/cv.tex
@@ -60,8 +60,9 @@ one of the models.}
 \cventry{October~2006--April~2007}{Software Engineer}{MitriDAT}{Kyiv}{}{}                % arguments 3 to 6 are optional
 
 \subsection{Miscellaneous}
-\cventry{Jan~2013--Present}{Podcast Lead}{RWpod}{Kyiv}{}{Lead podcast about Ruby and Web technologies}% arguments 3 to 6 are optional
-\cventry{2019}{Jury in the Software Architecture category}{Ukrainian IT Awards 2019}{Kyiv}{}{}  % arguments 3 to 6 are optional
+\cventry{Jan~2013--Present}{Podcast Lead}{RWpod}{Kyiv}{https://www.rwpod.com/}{Lead podcast about Ruby and Web technologies}% arguments 3 to 6 are optional
+\cventry{2020}{Head of the Jury in the Software Architecture category}{Ukrainian IT Awards 2020}{Kyiv}{https://itawards.ua/en/}{}  % arguments 3 to 6 are optional
+\cventry{2019}{Jury in the Software Architecture category}{Ukrainian IT Awards 2019}{Kyiv}{https://itawards.ua/en/}{}  % arguments 3 to 6 are optional
 \cventry{June~2007--June~2008}{Technical writer}{}{Kyiv}{}{Writing articles in Ukrainian IT-magazines}% arguments 3 to 6 are optional
 
 \section{Languages}
@@ -78,7 +79,7 @@ one of the models.}
 \cventry{2011}{1-st place at HTC Android Developer Context}{HTC Android Developer Context}{Kyiv}{}{}  % arguments 3 to 6 are optional
 
 \section{Computer skills}
-\cvline{Operating systems}{Windows, Linux, Mac OS}
+\cvline{Operating systems}{Linux, Mac OS}
 \cvline{Programming Languages}{Ruby, Python, JavaScript, Golang, Objective-C, Erlang, Elixir, C/C++}
 \cvline{Databases}{MySQL, PostgreSQL, MongoDB, CouchDB, Sqlite, Redis, Riak, Couchbase, Neo4j, Memcache, MemcacheDb, etc.}
 \cvline{Networking}{CISCO Routers, WAN, Apache, Nginx, lighttpd, etc.}
