update current project

--- a/cv.tex
+++ b/cv.tex
@@ -49,8 +49,9 @@ one of the models.}
 
 \section{Experience}
 \subsection{Vocational}
+\cventry{Jan~2022--Present}{Software Architect}{Coupler}{Kyiv}{}{}                % arguments 3 to 6 are optional
 \cventry{Dec~2017--Present}{Software Architect}{Railsware Labs}{Kyiv}{}{}                % arguments 3 to 6 are optional
-\cventry{Feb~2013--Present}{Software Architect}{Mailtrap}{Kyiv}{}{}                % arguments 3 to 6 are optional
+\cventry{Feb~2013--Jan~2022}{Software Architect}{Mailtrap}{Kyiv}{}{}                % arguments 3 to 6 are optional
 \cventry{August~2009--Present}{Lead Software Engineer, DevOps}{Railsware}{Kyiv}{}{}                % arguments 3 to 6 are optional
 \cventry{Feb~2017--Dec~2017}{Software Architect}{MontessoriCompass.com}{Kyiv}{}{}                % arguments 3 to 6 are optional
 \cventry{Feb~2015--Jan~2017}{Software Architect}{4Finance}{Kyiv}{}{}                % arguments 3 to 6 are optional
