--- a/cv.tex
+++ b/cv.tex
@@ -95,7 +95,7 @@ one of the models.}
 \cvlistitem{https://github.com/le0pard}
 \cvlistitem{https://ua.linkedin.com/in/le0pard}
 \cvlistitem{https://twitter.com/leopard\_me}
-\cvlistitem{http://resume.github.com/?le0pard}
+\cvlistitem{https://resume.github.io/?le0pard}
 
 \section{Publications}
 \cvlistitem{http://postgresql.leopard.in.ua/ \\ Working with Postgresql: tuning and scaling (russian book)}
